# nugu-examples

./: .cppcheck_suppress.txt  .gitignore  CMakeLists.txt  README.md
auth/: CMakeLists.txt  nugu_auth_helper.cpp  nugu_auth_helper.hh  nugu_auth_sample.cpp  resource.qrc
auth/qml/: TextBoxForm.qml  TextInputForm.qml  WebView.qml  main.qml
cmake/: Feature.cmake  Utils.cmake
daemon/: CMakeLists.txt  main.cc  nugu_daemon_sample.py
extension/: CMakeLists.txt  base_listener_with_handler.cc  base_listener_with_handler.hh  command_manager.cc  command_manager.hh  integrated_state_listener.cc  integrated_state_listener.hh  main.cc  nugu_extension_sample.cc  sdk_manager_wrapper.cc  sdk_manager_wrapper.hh  speech_operator_handler.cc  speech_operator_handler.hh  text_handler.cc  text_handler.hh
extension/config/: nugu-config.json
gui/: CMakeLists.txt  main.cc
gui-app/: CMakeLists.txt  main.cc
gui/assets/: resource.qrc
gui/assets/qml/: TemplateView.qml  TextCommand.qml  VoiceChrome.qml  VolumePopup.qml  main.qml
gui/assets/scripts/: voice_chrome_indicator.html
gui/config/: nugu-gui-config.json  nugu-template-config.json
gui/src/: nugu_gui_sample.cpp  nugu_worker.cpp  nugu_worker.hpp  speaker_controller.cpp  speaker_controller.hh
gui/src/adaptor/: display_adaptor.cpp  display_adaptor.hpp  nugu_adaptor.cpp  nugu_adaptor.hpp  voice_chrome_adaptor.cpp  voice_chrome_adaptor.hpp
multi-app/: CMakeLists.txt  main.cc
single-app/: CMakeLists.txt  main.cc
