# set CMP0100 policy from CMake version 3.24.2 for using AUTOMOC
IF(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.24.2")
    CMAKE_POLICY(SET CMP0100 NEW)
ENDIF()

FIND_PACKAGES(Qt5 "Core;Quick;WebEngine;Widgets")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)

SET(target_app nugu_auth_sample)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB_RECURSE sources *.cpp)

ADD_EXECUTABLE(${target_app} ${sources} resource.qrc)
TARGET_LINK_LIBRARIES(${target_app} PRIVATE ${Qt5_LIBS})

INSTALL(TARGETS ${target_app} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
